--- a/index.html
+++ b/index.html
@@ -4,51 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Break Tracker</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #f4f4f4;
+            text-align: left;
+        }
+
+        textarea {
+            width: 100%;
+            resize: vertical;
+        }
+
+        button {
+            padding: 8px 16px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
     <h2>Employee Break Time Tracker</h2>
     <form id="breakForm">
-        <label for="employeeName">Select Employee:</label><br>
-        <select id="employeeName" name="employeeName" onchange="captureTimeIn()" required>
-            <option value="" disabled selected>Select Employee</option>
-            <option value="Patrick Noel">Patrick Noel</option>
-            <option value="Pierre Clerveaux">Pierre Clerveaux</option>
-            <option value="Nigel Mccantis">Nigel Mccantis</option>
-            <option value="Helen Mars">Helen Mars</option>
-            <option value="Ana Huezo">Ana Huezo</option>
-            <option value="Pablum">Pablum</option>
-            <option value="Ralph Morris">Ralph Morris</option>
-            <option value="Zamor Raymond">Zamor Raymond</option>
-            <option value="Frans Funga">Frans Funga</option>
-            <option value="Georgina Ramirez">Georgina Ramirez</option>
-            <option value="Synthiche">Synthiche</option>
-            <option value="Jean Kodia">Jean Kodia</option>
-            <option value="Christina">Christina</option>
-        </select><br><br>
-
-        <label for="timeIn">Break Start (Time In):</label><br>
-        <input type="text" id="timeIn" name="timeIn" readonly><br><br>
-
-        <label for="timeOut">Break End (Time Out):</label><br>
-        <input type="text" id="timeOut" name="timeOut" readonly><br><br>
-
-        <label for="totalTime">Total Break Time (calculated):</label><br>
-        <input type="text" id="totalTime" name="totalTime" readonly><br><br>
-
-        <button type="button" onclick="captureTimeOut()">End Break</button><br><br>
-
+        <table>
+            <tr>
+                <th>Field</th>
+                <th>Details</th>
+            </tr>
+            <tr>
+                <td>Employee Name</td>
+                <td>
+                    <select id="employeeName" name="employeeName" onchange="captureTimeIn()" required>
+                        <option value="" disabled selected>Select Employee</option>
+                        <option value="Patrick Noel">Patrick Noel</option>
+                        <option value="Pierre Clerveaux">Pierre Clerveaux</option>
+                        <option value="Nigel Mccantis">Nigel Mccantis</option>
+                        <option value="Helen Mars">Helen Mars</option>
+                        <option value="Ana Huezo">Ana Huezo</option>
+                        <option value="Pablum">Pablum</option>
+                        <option value="Ralph Morris">Ralph Morris</option>
+                        <option value="Zamor Raymond">Zamor Raymond</option>
+                        <option value="Frans Funga">Frans Funga</option>
+                        <option value="Georgina Ramirez">Georgina Ramirez</option>
+                        <option value="Synthiche">Synthiche</option>
+                        <option value="Jean Kodia">Jean Kodia</option>
+                        <option value="Christina">Christina</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Type of Break</td>
+                <td>
+                    <select id="breakType" name="breakType" required>
+                        <option value="" disabled selected>Select Break Type</option>
+                        <option value="Lunch Break (30 minutes)">Lunch Break (30 minutes)</option>
+                        <option value="Bathroom Break (15 minutes)">Bathroom Break (15 minutes)</option>
+                        <option value="Exceptional Break">Exceptional Break</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Break Start (Time In)</td>
+                <td><input type="text" id="timeIn" name="timeIn" readonly></td>
+            </tr>
+            <tr>
+                <td>Break End (Time Out)</td>
+                <td><input type="text" id="timeOut" name="timeOut" onclick="captureTimeOut()" placeholder="Click to auto-fill or enter manually"></td>
+            </tr>
+            <tr>
+                <td>Total Break Time</td>
+                <td><input type="text" id="totalTime" name="totalTime" readonly></td>
+            </tr>
+            <tr>
+                <td>Comments</td>
+                <td><textarea id="comments" name="comments" rows="3" placeholder="Optional: Add comments here"></textarea></td>
+            </tr>
+        </table>
+        <br>
         <button type="submit">Submit</button>
     </form>
 
     <script>
         let timeIn, timeOut;
 
+        // Capture the current time when selecting an employee
         function captureTimeIn() {
             const now = new Date();
             timeIn = now;
             document.getElementById('timeIn').value = now.toLocaleTimeString();
         }
 
+        // Capture the current time when clicking on Break End or allow manual input
         function captureTimeOut() {
             const now = new Date();
             timeOut = now;
@@ -66,6 +128,7 @@
             }
         }
 
+        // Handle form submission
         document.getElementById('breakForm').onsubmit = function (e) {
             e.preventDefault();
             const formData = new FormData(this);
