--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
         }
 
         .green-highlight {
-            background-color: #d4edda;
-            color: #155724;
+            background-color: #008000; /* Hard Green */
+            color: white;
             font-weight: bold;
         }
 
         .yellow-highlight {
-            background-color: #fff3cd;
-            color: #856404;
+            background-color: #FFD700; /* Hard Yellow */
+            color: black;
             font-weight: bold;
         }
 
         .red-highlight {
-            background-color: #f8d7da;
-            color: #721c24;
+            background-color: #FF0000; /* Hard Red */
+            color: white;
             font-weight: bold;
         }
     </style>
